--- a/taobao.css
+++ b/taobao.css
@@ -513,7 +513,7 @@ li{
 .head-box{
 	width: 100%;
 	height: 91px;
-	background-image: url(images/背景.png);
+	background-image: url(./images/背景.png);
 	background-size: 100%;
 	text-align: center;
 }
